ISPN-12722 Config I/O for JSON