@@ -12,12 +12,14 @@ import java.util.Map;
 import java.util.Properties;
 
 import org.infinispan.commons.configuration.io.AbstractConfigurationReader;
+import org.infinispan.commons.configuration.io.ConfigurationFormatFeature;
 import org.infinispan.commons.configuration.io.ConfigurationReaderException;
 import org.infinispan.commons.configuration.io.ConfigurationResourceResolver;
 import org.infinispan.commons.configuration.io.Location;
 import org.infinispan.commons.configuration.io.NamingStrategy;
 import org.infinispan.commons.configuration.io.PropertyReplacer;
 import org.infinispan.commons.logging.Log;
+import org.infinispan.commons.util.SimpleImmutableEntry;
 import org.infinispan.commons.util.Util;
 
 /**
@@ -25,6 +27,7 @@ import org.infinispan.commons.util.Util;
  * @since 12.1
  **/
 public class YamlConfigurationReader extends AbstractConfigurationReader {
+   private static final int INDENT = 2;
    final private Deque<Parsed> state = new ArrayDeque<>();
    final private List<String> attributeNames = new ArrayList<>();
    final private List<String> attributeValues = new ArrayList<>();
@@ -33,7 +36,7 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
    private final BufferedReader reader;
    private Parsed next;
    private ElementType type = ElementType.START_DOCUMENT;
-   private int line = 0;
+   private int row = 0;
    private Node lines;
 
    public YamlConfigurationReader(Reader reader, ConfigurationResourceResolver resolver, Properties properties, PropertyReplacer replacer, NamingStrategy namingStrategy) {
@@ -41,26 +44,46 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
       this.reader = reader instanceof BufferedReader ? (BufferedReader) reader : new BufferedReader(reader);
       namespaces.put("", ""); // Default namespace
       loadTree();
+      printTree(lines);
    }
 
+   private void printTree(Node node) {
+      if (node != null) {
+         for (int i = 0; i < node.parsed.indent; i++) {
+            System.out.print(' ');
+         }
+         System.out.println(node.parsed);
+         if (node.children != null) {
+            node.children.forEach(c -> printTree(c));
+         }
+      }
+   }
+
+
    private static class Node {
-      final Parsed line;
-      Deque<Node> children;
+      final Parsed parsed;
+      ArrayList<Node> children;
       Node parent;
 
-      Node(Parsed line) {
-         this.line = line;
+      Node(Parsed parsed) {
+         this.parsed = parsed;
       }
 
       Node addChild(Node child) {
          if (children == null) {
-            children = new ArrayDeque<>();
+            children = new ArrayList<>();
          }
-         if (isAttribute(child.line)) {
-            children.addFirst(child);
-         } else {
-            children.addLast(child);
+         if (isAttribute(child.parsed)) {
+            // Add before the first non attribute
+            for (int i = 0; i < children.size(); i++) {
+               if (!isAttribute(children.get(i).parsed)) {
+                  children.add(i, child);
+                  child.parent = this;
+                  return child;
+               }
+            }
          }
+         children.add(child);
          child.parent = this;
          return child;
       }
@@ -72,7 +95,7 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
 
       Node next() {
          if (children != null && !children.isEmpty()) {
-            return children.removeFirst();
+            return children.remove(0);
          } else {
             if (parent == null) {
                return null;
@@ -83,43 +106,74 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
       }
 
       public String toString() {
-         return line.toString();
+         return parsed.toString();
       }
    }
 
    private void loadTree() {
+      Parsed parsed;
       Node current = null;
       do {
          try {
             do {
-               next = parseLine(reader.readLine());
-            } while (next != null && next.name == null && next.value == null);
+               parsed = parseLine(reader.readLine());
+            } while (parsed != null && parsed.name == null && parsed.value == null && !parsed.listItem);
          } catch (IOException e) {
-            throw new ConfigurationReaderException(e, Location.of(line, 1));
+            throw new ConfigurationReaderException(e, Location.of(row, 1));
          }
-         if (next == null) {
+         if (parsed == null) {
             // EOF
             return;
          }
          if (lines == null) {
-            lines = new Node(next);
+            lines = new Node(parsed);
             current = lines;
          } else {
-            if (next.indent == current.line.indent) {
+            if (parsed.listItem && parsed.value == null) {
+               // Find the parent of the previous element
+               current = findParent(current, parsed);
+               // Copy the last node
+               current = current.addSibling(new Node(current.parsed));
+            } else if (parsed.indent == current.parsed.indent) {
                // Sibling of the current node
-               current = current.addSibling(new Node(next));
-            } else if (next.indent > current.line.indent) {
+               current = current.addSibling(new Node(parsed));
+            } else if (parsed.indent > current.parsed.indent) {
                // Child of the current node
-               current = current.addChild(new Node(next));
+               if (parsed.listItem && parsed.name != null) {
+                  current = addListItem(parsed, current);
+               }
+               current = current.addChild(new Node(parsed));
             } else {
                // Find the parent
-               while (next.indent <= current.line.indent) {
-                  current = current.parent;
+               current = findParent(current, parsed);
+               if (parsed.listItem && parsed.name != null) {
+                  current = addListItem(parsed, current);
                }
-               current = current.addChild(new Node(next));
+               current = current.addChild(new Node(parsed));
             }
          }
-      } while (next != null);
+      } while (parsed != null);
+   }
+
+   private Node addListItem(Parsed parsed, Node current) {
+      // It's a list item, we create a synthetic node with the same name as the parent
+      Parsed holder = new Parsed(parsed.row);
+      holder.nsPrefix = current.parsed.nsPrefix;
+      holder.name = current.parsed.name;
+      holder.indent = parsed.indent;
+      holder.listItem = true;
+      current = current.addChild(new Node(holder));
+      // And the parsed line is added as a child of the holder
+      parsed.indent += INDENT;
+      parsed.listItem = false;
+      return current;
+   }
+
+   private Node findParent(Node current, Parsed line) {
+      while (line.indent <= current.parsed.indent) {
+         current = current.parent;
+      }
+      return current;
    }
 
    private static boolean isAttribute(Parsed p) {
@@ -130,7 +184,7 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
       if (s == null) {
          return null;
       } else {
-         Parsed parsed = new Parsed(++line);
+         Parsed parsed = new Parsed(++row);
          int length = s.length();
          // Trim any space at the end of the line
          while (length > 0 && s.charAt(length - 1) == ' ') length--;
@@ -140,13 +194,13 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
             int c = s.charAt(i);
             switch (c) {
                case ' ':
-                  if (state == 0) {
+                  if (state == 0 && !parsed.listItem) {
                      parsed.indent++;
                   } // else ignore: it may be ignorable or part of a key/value
                   break;
                case '\t':
                   if (state == 0) {
-                     parsed.indent += 2;
+                     parsed.indent += INDENT;
                   } // else ignore: it may be ignorable or part of a key/value
                   break;
                case '#':
@@ -154,14 +208,16 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
                      parsed.value = s.substring(start, i - 1).trim();
                      return parsed;
                   } else if (state == 1) {
-                     throw new ConfigurationReaderException("Invalid comment", Location.of(line, i));
+                     throw new ConfigurationReaderException("Invalid comment", Location.of(row, i));
                   } else {
                      return parsed; // the rest of the  line is a comment
                   }
                case ':':
                   if (i + 1 == length || s.charAt(i + 1) == ' ') {
                      if (state == 1) {
-                        parseKey(parsed, s.substring(start, i));
+                        if (start >= 0) {
+                           parseKey(parsed, s.substring(start, i));
+                        }
                         state = 2;
                      }
                   }
@@ -174,7 +230,7 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
                   }
                case '\\':
                   if (i + 1 == length) {
-                     throw new ConfigurationReaderException("Incomplete escape sequence", Location.of(line, i));
+                     throw new ConfigurationReaderException("Incomplete escape sequence", Location.of(row, i));
                   } else {
                      i++;
                   }
@@ -192,7 +248,7 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
                      } else if (parts.length == 2 && parts[0].equals("%YAML")) {
                         return parsed;
                      } else {
-                        Log.CONFIG.warn("Unknown directive " + s + " at " + Location.of(line, i));
+                        Log.CONFIG.warn("Unknown directive " + s + " at " + Location.of(row, i));
                      }
                   }
                   break;
@@ -202,16 +258,9 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
                         // It's a separator
                         return parsed;
                      }
-                  } else if (s.charAt(i + 1) == ' ') {
-                     // It's an array delimiter
-                     parsed.list = true;
-                     i++;
-                     if (state == 0) {
-                        if (s.charAt(length - 1) != ':') {
-                           // It's a bare value
-                           state = 2;
-                        }
-                     }
+                  } else if (state == 0) {
+                     // It's a list delimiter
+                     parsed.listItem = true;
                   }
                   break;
                case '"':
@@ -219,17 +268,17 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
                   if (state == 0 || state == 2) {
                      int endQuote = s.indexOf(c, i + 1);
                      if (endQuote < 0) {
-                        throw new ConfigurationReaderException("Missing closing quote", Location.of(line, i));
+                        throw new ConfigurationReaderException("Missing closing quote", Location.of(row, i));
                      }
                      String v = s.substring(i + 1, endQuote).trim();
                      if (state == 0) {
                         parseKey(parsed, v);
-                        state = 2;
+                        state = 1;
                      } else {
                         parsed.value = v;
                         state = 4;
                      }
-                     i = endQuote + 1; // Skip
+                     i = endQuote; // Skip
                      break;
                   }
                   // Fallthrough
@@ -243,10 +292,20 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
                   }
             }
          }
-         if (state == 1) { // Unterminated key
-            throw new ConfigurationReaderException("Incomplete line", Location.of(line, 1));
-         }
-         if (state == 3) { // we reached the end of the line
+         if (state == 1) { // Bare string
+            if (parsed.listItem) {
+               if (start > 0) {
+                  parsed.value = s.substring(start).trim();
+               } else {
+                  // The value was stored in the name, swap them
+                  parsed.value = parsed.name;
+                  parsed.name = null;
+               }
+            } else {
+               // Unterminated
+               throw new ConfigurationReaderException("Incomplete line", Location.of(row, 1));
+            }
+         } else if (state == 3) { // we reached the end of the line
             parsed.value = s.substring(start).trim();
          }
          return parsed;
@@ -255,7 +314,7 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
 
    private void parseKey(Parsed p, String s) {
       int colon = s.lastIndexOf(':');
-      p.name = namingStrategy.convert(colon < 0 ? s : s.substring(colon + 1));
+      p.name = colon < 0 ? s : s.substring(colon + 1);
       p.nsPrefix = colon < 0 ? "" : s.substring(0, colon);
       if (!p.nsPrefix.isEmpty()) {
          namespaces.putIfAbsent(p.nsPrefix, namingStrategy.convert(p.nsPrefix));
@@ -265,7 +324,7 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
    private void readNext() {
       do {
          if (lines != null) {
-            next = lines.line;
+            next = lines.parsed;
             lines = lines.next();
          } else {
             next = null;
@@ -304,29 +363,30 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
                } else {
                   state.pop();
                }
-            } else if (next.list && state.peek().list) {
+            } else if (next.listItem && state.peek().listItem) {
                if (type != ElementType.END_ELEMENT) {
                   // Emit the end element for the current item
                   type = ElementType.END_ELEMENT;
-                  return type;
                } else {
                   // Next element in the list
                   state.peek().value = next.value;
                   readNext();
                   type = ElementType.START_ELEMENT;
-                  return type;
                }
+               return type;
             }
          }
          state.push(next);
          int currentIndent = next.indent;
          readNext();
-         if (next != null && next.name == null && next.list) {
-            // Value list
-            Parsed current = state.peek();
-            current.list = true;
-            current.value = next.value;
-            readNext();
+         if (next != null && next.listItem) {
+            if (next.name == null) {
+               // Bare value list
+               Parsed current = state.peek();
+               current.listItem = true;
+               current.value = next.value;
+               readNext();
+            }
          } else {
             // Read the attributes: they are indented relative to the element and have a value
             while (next != null && next.indent > currentIndent && next.name != null && next.value != null) {
@@ -349,7 +409,7 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
 
    @Override
    public Location getLocation() {
-      return Location.of(line, 1);
+      return Location.of(row, 1);
    }
 
    @Override
@@ -363,9 +423,9 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
    }
 
    @Override
-   public String getAttributeValue(String name) {
+   public String getAttributeValue(String localName, NamingStrategy strategy) {
       for (int i = 0; i < attributeNames.size(); i++) {
-         if (name.equals(attributeNames.get(i))) {
+         if (localName.equals(strategy.convert(attributeNames.get(i)))) {
             return attributeValues.get(i);
          }
       }
@@ -409,6 +469,36 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
    }
 
    @Override
+   public Map.Entry<String, String> getMapItem(String nameAttribute) {
+      String name = getLocalName(NamingStrategy.IDENTITY);
+      nextElement();
+      String type = getLocalName();
+      return new SimpleImmutableEntry<>(name, type);
+   }
+
+   @Override
+   public void endMapItem() {
+      nextElement();
+   }
+
+   @Override
+   public String[] readArray(String outer, String inner) {
+      require(ElementType.START_ELEMENT, null, outer);
+      List<String> elements = new ArrayList<>();
+      boolean loop;
+      do {
+         elements.add(getElementText());
+         nextElement();
+         require(ElementType.END_ELEMENT, null, outer);
+         loop = next.listItem;
+         if (loop) {
+            nextElement();
+         }
+      } while (loop);
+      return elements.toArray(new String[0]);
+   }
+
+   @Override
    public void require(ElementType type, String namespace, String name) {
       if (type != this.type
             || (namespace != null && !namespace.equals(getNamespace()))
@@ -426,33 +516,40 @@ public class YamlConfigurationReader extends AbstractConfigurationReader {
                && getNamespace() != null && !namespace.equals(getNamespace())
                ? " and" : "")
                + (namespace != null && getNamespace() != null && !namespace.equals(getNamespace())
-               ? " namespace '" + getNamespace() + "'" : ""), Location.of(line, 1));
+               ? " namespace '" + getNamespace() + "'" : ""), Location.of(row, 1));
       }
    }
 
    @Override
-   public void close() throws Exception {
+   public boolean hasFeature(ConfigurationFormatFeature feature) {
+      return false;
+   }
+
+   @Override
+   public void close() {
       Util.close(reader);
    }
 
    public static class Parsed {
-      final int line;
+      final int row;
       int indent;
+      boolean listItem;
       boolean list;
       String name;
       String nsPrefix;
       String value;
 
-      public Parsed(int line) {
-         this.line = line;
+      public Parsed(int row) {
+         this.row = row;
       }
 
       @Override
       public String toString() {
          return "Parsed{" +
-               "line=" + line +
+               "row=" + row +
                ", indent=" + indent +
                ", list=" + list +
+               ", listItem=" + listItem +
                ", name='" + name + '\'' +
                ", nsPrefix='" + nsPrefix + '\'' +
                ", value='" + value + '\'' +
